 /* $Id: ChangeLog,v 1.743 2000-02-22 17:04:24 cbratschi Exp $ */

 2000-02-22: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: merged with Corel WINE 20000212
		    added common base functions

 2000-02-21: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- CRTDLL: Added wtol, wtoi, setsystime, getsystime

 2000-02-21: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: merged controls and nc code with Corel WINE 20000212
		  added WS_EX_CONTEXTHELP button

 2000-02-21: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
        - WIN32K: *Initial support for UNIX-styled scripts
                   (files starting with an #!<interpreter> [args...])
                   This is a _very_ big hack! But never the less it's working.
                   (or at least it seems like working...)
                  *The kernel symbol importer is enhanced to support more
                   generic function prologs and to import variables and
                   16-bit functions.
                  *Segments are now locked in physical memory.
                  (Note, last changes have not been tested on Aurora yet,
                   but it will hopefully work just fine.)

 2000-02-21: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: SetDIBits bugfix (for dib sections)
	- USER32: Ported all Wine accelerator apis (fixes keys in calc)

 2000-02-21: Jens Wiessner <wiessnej@rfi.de>
	- RASAPI32: Added stubs
	- OLEPRO32: Ported Corel Wine stub dll
	- CRTDLL: Replaced some stubs

 2000-02-18: Sander van Leeuwen <sandervl@xs4all.nl>
	- OPENGL\GLIDE: Added Odin version of Glide based on the OS/2 port
                        written by Craig Ballantyne. (Voodoo 1)
                        NOTE: Includes 3dfx Glide license

 2000-02-17: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Fixed memory map view bug (main map deleted when there
                    were still views left) -> fixes crash when playing Realplayer
                    video (.rm) files