@@ -1,4 +1,4 @@
-/* $Id: dbglocal.h,v 1.1 2000-02-16 14:18:09 sandervl Exp $ */
+/* $Id: dbglocal.h,v 1.2 2000-02-22 19:11:49 sandervl Exp $ */
 
 /*
  * debug logging functions for OS/2
@@ -48,7 +48,6 @@ extern USHORT DbgEnabled[DBG_MAXFILES];
 #else
 
 #define ParseLogStatus()
-#define DBG_LOCALLOG(a)
 
 #endif //DEBUG
 
